--- a/package.json
+++ b/package.json
@@ -1,14 +1,32 @@
 {
-  "name": "reaction2",
-  "version": "0.1.0",
-  "private": true,
+  "name": "reaction",
+  "version": "0.1.1",
+  "license": "MIT",
+  "author": "swellee <svtt@163.com> (https://github.com/swellee)",
+  "homepage": "https://github.com/swellee/reaction",
+  "repository": "github:swellee/reaction",
+  "bugs": "https://github.com/swellee/reaction/issues",
+  "main": "./lib/index.js",
+  "typings": "./lib/index.d.ts",
+  "keywords": [
+    "react",
+    "reactjs",
+    "redux",
+    "action",
+    "module"
+  ],
   "dependencies": {
+    "react-redux": "*",
+    "redux": "*"
+  },
+  "devDependencies": {
     "@babel/core": "7.5.5",
     "@svgr/webpack": "4.3.2",
     "@types/jest": "24.0.18",
-    "@types/node": "12.7.4",
+    "@types/node": "12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-redux": "^7.1.2",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "babel-eslint": "10.0.2",
@@ -50,8 +68,6 @@
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
-    "react-redux": "^7.1.1",
-    "redux": "^4.0.4",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
@@ -59,7 +75,7 @@
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.2",
-    "typescript": "3.6.2",
+    "typescript": "3.6.3",
     "url-loader": "2.1.0",
     "webpack": "4.39.1",
     "webpack-dev-server": "3.2.1",
